--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </a>
                 </div>
                 <div class="base-col author-col">
-                    <a href="" target="_blank" class="author-text">
+                    <a href="https://scholar.google.com/citations?user=EU52riMAAAAJ&hl=ko" target="_blank" class="author-text">
                         Dahyun Chung
                     </a>
                 </div>
