--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </a>
                 </div>
                 <div class="base-col author-col">
-                    <a href="" target="_blank" class="author-text">
+                    <a href="https://scholar.google.com/citations?user=rfDpohEAAAAJ&hl=ko" target="_blank" class="author-text">
                         Jaeho Lee
                     </a>
                 </div>
@@ -128,7 +128,7 @@
             </div>
             <div class="base-row author-row">
                 <div class="base-col author-col">
-                    <a href="" target="_blank" class="author-text">
+                    <a href="https://scholar.google.com/citations?user=vqSp0lwAAAAJ&hl=ko" target="_blank" class="author-text">
                         Hyunwook Choi
                     </a>
                 </div>
@@ -180,7 +180,7 @@
             
             <!-- Contents: TL;DR -->
             
-            <section id="results" class="section">
+            <section id="teaser" class="section">
                 <div class="tldr">
                     <b>TL;DR</b>: MATRIX identifies interaction-dominant layers in video DiTs and introduces a simple yet effective regularization that aligns their attention to multi-instance mask tracks, resulting in more interaction-aware video generation.
                 </div>
