--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
             <section id="results" class="section">
                 <h2>Results</h2>
-                <h3>Qualitative Comparisons <b>(CogVideoX-5B-I2V)</b></h3>
+                <h3>Qualitative Comparisons <b>(CogVideoX-5B-I2V baseline)</b></h3>
                 <div class="slideshow-container">
                     <div class="slideshow" data-range="000-011" data-dir="videos" data-ext="mp4"></div>
                     <button class="slideshow-nav prev" aria-label="Previous slide" title="Previous">&#10094;</button>
@@ -354,7 +354,7 @@
                       </button>
                 </div>
 
-                <h3>Qualitative Comparisons <b>(Wan-14B-I2V)</b></h3>
+                <h3>Qualitative Comparisons <b>(Wan2.1-14B-I2V baseline)</b></h3>
                 <div class="slideshow-container">
                     <div class="slideshow" data-range="012-018" data-dir="wan_videos" data-ext="mp4"></div>
                     <button class="slideshow-nav prev" aria-label="Previous slide" title="Previous">&#10094;</button>
